Fix bug from not resetting list and move store hours functions to new file

--- a/JournalPause.csproj
+++ b/JournalPause.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="JournalPause.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreHours.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.9.0.0, Culture=neutral, processorArchitecture=MSIL">
