--- a/JournalPause.csproj
+++ b/JournalPause.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +41,10 @@
     <Compile Include="JournalPause.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreHours.cs" />
+    <Compile Include="Tiny Resort Tools\DebugTools.cs" />
+    <Compile Include="Tiny Resort Tools\ModWindow.cs" />
+    <Compile Include="Tiny Resort Tools\NotificationPatch.cs" />
+    <Compile Include="Tiny Resort Tools\Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.9.0.0, Culture=neutral, processorArchitecture=MSIL">
